--- a/contact.html
+++ b/contact.html
@@ -23,22 +23,22 @@
   </navbar>
 
   <div class="contact-form">
-    <form>
-
+    <form class="contact">
       <label for="name">First Name</label>
-      <input type="text" placeholder="Enter your name..">
+      <input type="text" id="name" placeholder="Enter your name..">
 
       <label for="email">Email</label>
-      <input type="text" placeholder="Enter your email..">
+      <input type="text" id="email" placeholder="Enter your email.." required>
 
 
       <label for="message">Message</label>
-      <textarea name="message" placeholder="Write something.."></textarea>
+      <textarea name="message" id="message" placeholder="Write something.."></textarea>
 
       <input class="btn" id="submit" type="submit" value="Submit">
 
     </form>
   </div>
+  <script src="app.js"></script>
 </body>
 
 </html>
